Enhance service categories in aws.html by adding descriptions and adjusting header margins for improved clarity and design

--- a/aws.html
+++ b/aws.html
@@ -257,7 +257,8 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-8 max-w-7xl mx-auto">
                 <!-- Compute -->
                 <div class="service-category" style="border-color: #FF9900;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #FF9900;">Compute</h3>
+                    <h3 class="text-2xl font-bold mb-2" style="color: #FF9900;">Compute</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Processing power to run your applications, like a virtual CPU.</p>
                     <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#FF9900"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">EC2</text></svg><span>Amazon EC2</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#FF9900"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">EB</text></svg><span>Elastic Beanstalk</span></div>
@@ -268,8 +269,9 @@
                 </div>
                 <!-- Storage & Content Delivery -->
                 <div class="service-category" style="border-color: #D95140;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #D95140;">Storage & Content Delivery</h3>
-                    <div class="flex justify-center flex-wrap mt-auto">
+                    <h3 class="text-2xl font-bold mb-2" style="color: #D95140;">Storage & Content Delivery</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Store, retrieve, and manage data, plus deliver content faster to users globally.</p>
+                    <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#D95140"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">EBS</text></svg><span>Amazon EBS</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#D95140"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">EFS</text></svg><span>Amazon EFS</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#D95140"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">S3</text></svg><span>Amazon S3</span></div>
@@ -281,8 +283,9 @@
                 </div>
                 <!-- Database -->
                 <div class="service-category" style="border-color: #2E73B8;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #2E73B8;">Database</h3>
-                    <div class="flex justify-center flex-wrap mt-auto">
+                    <h3 class="text-2xl font-bold mb-2" style="color: #2E73B8;">Database</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Structured systems for storing, retrieving, and querying data efficiently.</p>
+                    <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#2E73B8"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">RDS</text></svg><span>RDS</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#2E73B8"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">DB</text></svg><span>DynamoDB</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#2E73B8"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">EC</text></svg><span>ElastiCache</span></div>
@@ -291,7 +294,8 @@
                 </div>
                 <!-- Networking -->
                 <div class="service-category" style="border-color: #FF4F8B;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #FF4F8B;">Networking</h3>
+                    <h3 class="text-2xl font-bold mb-2" style="color: #FF4F8B;">Networking</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Connects your cloud resources with each other and to users across the internet.</p>
                     <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#FF4F8B"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">VPC</text></svg><span>Amazon VPC</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#FF4F8B"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">DC</text></svg><span>Direct Connect</span></div>
@@ -300,8 +304,9 @@
                 </div>
                 <!-- Management Tools -->
                 <div class="service-category" style="border-color: #5F4B8B;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #5F4B8B;">Management Tools</h3>
-                    <div class="flex justify-center flex-wrap mt-auto">
+                    <h3 class="text-2xl font-bold mb-2" style="color: #5F4B8B;">Management Tools</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Monitor, control, automate, and optimize your cloud resources.</p>
+                    <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#5F4B8B"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">CW</text></svg><span>CloudWatch</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#5F4B8B"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="14" font-weight="bold" font-family="Inter, sans-serif">CFN</text></svg><span>CloudFormation</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#5F4B8B"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">CT</text></svg><span>CloudTrail</span></div>
@@ -311,7 +316,8 @@
                 </div>
                 <!-- Security & Identity -->
                 <div class="service-category" style="border-color: #00A896;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #00A896;">Security & Identity</h3>
+                    <h3 class="text-2xl font-bold mb-2" style="color: #00A896;">Security & Identity</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Ensure the right people and systems access the right resources at the right time.</p>
                     <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#00A896"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">IAM</text></svg><span>IAM</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#00A896"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">KMS</text></svg><span>KMS</span></div>
@@ -319,8 +325,9 @@
                 </div>
                 <!-- Application Services -->
                 <div class="service-category md:col-span-2" style="border-color: #E8A87C;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #E8A87C;">Application Services</h3>
-                    <div class="flex justify-center flex-wrap mt-auto">
+                    <h3 class="text-2xl font-bold mb-2" style="color: #E8A87C;">Application Services</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Build and run applications by handling messaging, queuing, and notifications.</p>
+                    <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#E8A87C"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">SES</text></svg><span>Amazon SES</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#E8A87C"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">SNS</text></svg><span>Amazon SNS</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#E8A87C"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">SQS</text></svg><span>Amazon SQS</span></div>
@@ -329,8 +336,9 @@
                 </div>
                 <!-- Developer Tools -->
                 <div class="service-category md:col-span-2" style="border-color: #8D6E63;">
-                    <h3 class="text-2xl font-bold mb-4" style="color: #8D6E63;">Developer Tools</h3>
-                    <div class="flex justify-center flex-wrap mt-auto">
+                    <h3 class="text-2xl font-bold mb-2" style="color: #8D6E63;">Developer Tools</h3>
+                    <p class="text-sm text-gray-400 mb-4 px-4">Support the DevOps lifecycle: code, build, test, deploy, and monitor applications.</p>
+                    <div class="flex justify-center flex-wrap">
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#8D6E63"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">CP</text></svg><span>CodePipeline</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#8D6E63"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">CD</text></svg><span>CodeDeploy</span></div>
                         <div class="service-icon"><svg width="48" height="48" viewBox="0 0 48 48" xmlns="http://www.w3.org/2000/svg"><rect width="48" height="48" rx="8" ry="8" fill="#8D6E63"/><text x="50%" y="50%" dominant-baseline="middle" text-anchor="middle" fill="#FFFFFF" font-size="16" font-weight="bold" font-family="Inter, sans-serif">CB</text></svg><span>CodeBuild</span></div>
