--- a/aws.html
+++ b/aws.html
@@ -348,6 +348,100 @@
             </div>
         </section>
 
+        <!-- EC2 Deep Dive Section -->
+        <section id="ec2-deep-dive" class="fade-in-section mb-20">
+            <h2 class="text-3xl font-bold text-center mb-12 text-white">Amazon EC2 Deep Dive</h2>
+            
+            <div class="grid md:grid-cols-2 gap-8 mb-12">
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700">
+                    <h3 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-orange-400 to-yellow-400 mb-4">Meaning of the Name</h3>
+                    <ul class="text-left space-y-2 text-gray-400">
+                        <li><strong class="text-orange-400">Elastic:</strong> Flexible, you can scale up/down based on need.</li>
+                        <li><strong class="text-orange-400">Compute:</strong> Processing power (virtual servers) that runs your applications.</li>
+                    </ul>
+                </div>
+                <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700">
+                    <h3 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-teal-400 to-cyan-400 mb-4">Analogy</h3>
+                    <p class="text-gray-400">Renting a dedicated generator for electricity → you don’t own the hardware, but you pay only for what you use.</p>
+                </div>
+            </div>
+
+            <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700 mb-12">
+                <h3 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-purple-400 to-pink-400 mb-4">What is EC2?</h3>
+                <ul class="list-disc list-inside space-y-3 text-gray-400 max-w-2xl mx-auto">
+                    <li>A web service that provides resizable virtual servers in the cloud.</li>
+                    <li>Highly customizable: choose OS, CPU, memory, storage, networking.</li>
+                    <li>Pay-as-you-go model: pay only for usage.</li>
+                    <li>Scalable: can scale from 1 VM to thousands in minutes.</li>
+                </ul>
+            </div>
+
+            <h3 class="text-2xl font-bold text-center mb-12 text-white">Steps to Launch an EC2 Instance</h3>
+            <div class="max-w-3xl mx-auto">
+                <div class="relative">
+                    <!-- Vertical Line -->
+                    <div class="absolute left-5 top-5 h-full w-0.5 bg-gray-700 hidden md:block"></div>
+                    <!-- Steps -->
+                    <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">0</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Choose Region (Where?)</h4>
+                            <p class="text-gray-400">Determines where your server physically runs. Example: Mumbai (ap-south-1).</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">1</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Choose AMI (What OS/App?)</h4>
+                            <p class="text-gray-400">An Amazon Machine Image is a template with an OS and apps. Options include Linux, Windows, or Marketplace AMIs.</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">2</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Choose Instance Type (How much CPU/RAM?)</h4>
+                            <p class="text-gray-400">Categories: General Purpose, Compute Optimized, Memory Optimized, Accelerated Computing, and Storage Optimized.</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">3</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Configure Instance</h4>
+                            <p class="text-gray-400">Set network (VPC & subnet), IAM role, monitoring, and launch multiple instances at once.</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">4</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Add Storage</h4>
+                            <p class="text-gray-400">Attach durable EBS volumes or temporary, high-performance instance store volumes.</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">5</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Add Tags</h4>
+                            <p class="text-gray-400">Add key-value metadata (e.g., Name=WebServer1) for billing, grouping, and automation.</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start mb-8">
+                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">6</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Configure Security Group (Firewall)</h4>
+                            <p class="text-gray-400">Define inbound/outbound rules to act as a virtual firewall (e.g., allow SSH port 22).</p>
+                        </div>
+                    </div>
+                     <div class="flex items-start">
+                        <div class="bg-green-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">✓</div>
+                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                            <h4 class="text-lg font-semibold text-white">Review & Launch</h4>
+                            <p class="text-gray-400">Check your configuration and launch the instance. Monitor its status on the EC2 Dashboard.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <!-- Footer Section -->
