Add explanation of multi-tenancy benefits in EC2 Deep Dive section of aws.html

--- a/aws.html
+++ b/aws.html
@@ -373,6 +373,7 @@
                     <li>Highly customizable: choose OS, CPU, memory, storage, networking.</li>
                     <li>Pay-as-you-go model: pay only for usage.</li>
                     <li>Scalable: can scale from 1 VM to thousands in minutes.</li>
+                    <li>Multi-tenancy allows multiple virtual machines to share resources on the same physical host, with isolation between them.</li>
                 </ul>
             </div>
 
