--- a/aws.html
+++ b/aws.html
@@ -377,69 +377,114 @@
                 </ul>
             </div>
 
-            <h3 class="text-2xl font-bold text-center mb-12 text-white">Steps to Launch an EC2 Instance</h3>
-            <div class="max-w-3xl mx-auto">
-                <div class="relative">
-                    <!-- Vertical Line -->
-                    <div class="absolute left-5 top-5 h-full w-0.5 bg-gray-700 hidden md:block"></div>
-                    <!-- Steps -->
-                    <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">0</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Choose Region (Where?)</h4>
-                            <p class="text-gray-400">Determines where your server physically runs. Example: Mumbai (ap-south-1).</p>
+            <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700 mb-12">
+                <h4 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-green-400 to-blue-400 mb-6">Instance Types (How much CPU/RAM?)</h4>
+                <div class="grid grid-cols-1 lg:grid-cols-2 gap-6 text-left">
+                    <!-- Left Column -->
+                    <div class="space-y-6">
+                        <div class="bg-gray-900/50 p-4 rounded-lg">
+                            <h5 class="font-bold text-lg text-white mb-2">General Purpose</h5>
+                            <p class="text-sm text-gray-400 mb-2"><strong class="text-gray-300">Analogy:</strong> A sedan car → good for most people.</p>
+                            <p class="text-sm text-gray-400 mb-3">Balanced mix of compute, memory, and networking. Best for web servers, dev/test environments.</p>
+                            <p class="text-xs text-gray-500">Examples: t3, t4g, m5, m6g</p>
+                        </div>
+                        <div class="bg-gray-900/50 p-4 rounded-lg">
+                            <h5 class="font-bold text-lg text-white mb-2">Memory Optimized</h5>
+                             <p class="text-sm text-gray-400 mb-2"><strong class="text-gray-300">Analogy:</strong> A bus → carries lots of passengers (data).</p>
+                            <p class="text-sm text-gray-400 mb-3">High memory-to-CPU ratio. Best for in-memory databases, big data analytics.</p>
+                             <p class="text-xs text-gray-500">Examples: r5, r6g, x1, z1d</p>
+                        </div>
+                         <div class="bg-gray-900/50 p-4 rounded-lg">
+                            <h5 class="font-bold text-lg text-white mb-2">Storage Optimized</h5>
+                            <p class="text-sm text-gray-400 mb-2"><strong class="text-gray-300">Analogy:</strong> A truck → built to carry huge cargo (data).</p>
+                            <p class="text-sm text-gray-400 mb-3">High, fast local storage with high IOPS. Best for data warehousing, large databases, real-time analytics.</p>
+                             <p class="text-xs text-gray-500">Examples: i3, i3en, d2, h1</p>
                         </div>
                     </div>
-                    <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">1</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Choose AMI (What OS/App?)</h4>
-                            <p class="text-gray-400">An Amazon Machine Image is a template with an OS and apps. Options include Linux, Windows, or Marketplace AMIs.</p>
+                    <!-- Right Column -->
+                    <div class="space-y-6">
+                        <div class="bg-gray-900/50 p-4 rounded-lg">
+                            <h5 class="font-bold text-lg text-white mb-2">Compute Optimized</h5>
+                            <p class="text-sm text-gray-400 mb-2"><strong class="text-gray-300">Analogy:</strong> A sports car → built for raw speed.</p>
+                            <p class="text-sm text-gray-400 mb-3">High-performance processors. Best for gaming servers, HPC, batch processing.</p>
+                             <p class="text-xs text-gray-500">Examples: c5, c6g, c7g</p>
                         </div>
-                    </div>
-                     <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">2</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Choose Instance Type (How much CPU/RAM?)</h4>
-                            <p class="text-gray-400">Categories: General Purpose, Compute Optimized, Memory Optimized, Accelerated Computing, and Storage Optimized.</p>
-                        </div>
-                    </div>
-                     <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">3</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Configure Instance</h4>
-                            <p class="text-gray-400">Set network (VPC & subnet), IAM role, monitoring, and launch multiple instances at once.</p>
-                        </div>
-                    </div>
-                     <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">4</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Add Storage</h4>
-                            <p class="text-gray-400">Attach durable EBS volumes or temporary, high-performance instance store volumes.</p>
-                        </div>
-                    </div>
-                     <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">5</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Add Tags</h4>
-                            <p class="text-gray-400">Add key-value metadata (e.g., Name=WebServer1) for billing, grouping, and automation.</p>
-                        </div>
-                    </div>
-                     <div class="flex items-start mb-8">
-                        <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">6</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Configure Security Group (Firewall)</h4>
-                            <p class="text-gray-400">Define inbound/outbound rules to act as a virtual firewall (e.g., allow SSH port 22).</p>
-                        </div>
-                    </div>
-                     <div class="flex items-start">
-                        <div class="bg-green-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">✓</div>
-                        <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                            <h4 class="text-lg font-semibold text-white">Review & Launch</h4>
-                            <p class="text-gray-400">Check your configuration and launch the instance. Monitor its status on the EC2 Dashboard.</p>
+                        <div class="bg-gray-900/50 p-4 rounded-lg">
+                            <h5 class="font-bold text-lg text-white mb-2">Accelerated Computing</h5>
+                            <p class="text-sm text-gray-400 mb-2"><strong class="text-gray-300">Analogy:</strong> A luxury car → specialized for high-end tasks.</p>
+                            <p class="text-sm text-gray-400 mb-3">Uses GPUs/FPGAs. Best for AI/ML training, 3D rendering, video encoding.</p>
+                             <p class="text-xs text-gray-500">Examples: p3, p4, g4dn, f1</p>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700 mb-12">
+                 <h3 class="text-2xl font-bold text-center mb-6 text-white">Interacting with AWS: The Console</h3>
+                 <div class="max-w-4xl mx-auto">
+                    <div class="bg-gray-900/50 p-6 rounded-lg mb-8">
+                        <h4 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-cyan-400 mb-4">AWS Management Console (Web UI)</h4>
+                        <p class="text-gray-400 mb-4">A web-based graphical interface to manage AWS services. It lets you search, configure, and monitor resources, and supports multiple logins.</p>
+                        <p class="text-gray-400 mb-4"><strong class="text-gray-300">Good for:</strong> Beginners, users who prefer a point-and-click interface, and occasional tasks.</p>
+                        <p class="text-gray-400"><strong class="text-gray-300">Analogy:</strong> Like using a bank’s website/app to check your balance and transfer money.</p>
+                    </div>
+
+                    <h4 class="text-xl font-bold text-center mb-8 text-white">Console Steps to Launch an EC2 Instance</h4>
+                    <div class="relative">
+                        <!-- Vertical Line -->
+                        <div class="absolute left-5 top-5 h-full w-0.5 bg-gray-700 hidden md:block"></div>
+                        <!-- Steps -->
+                        <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">0</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Choose Region (Where?)</h4>
+                                <p class="text-gray-400">Determines where your server physically runs. Example: Mumbai (ap-south-1).</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">1</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Choose AMI (What OS/App?)</h4>
+                                <p class="text-gray-400">An Amazon Machine Image is a template with an OS and apps. Options include Linux, Windows, or Marketplace AMIs.</p>
+                            </div>
+                        </div>
+                         <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">3</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Configure Instance</h4>
+                                <p class="text-gray-400">Set network (VPC & subnet), IAM role, monitoring, and launch multiple instances at once.</p>
+                            </div>
+                        </div>
+                         <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">4</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Add Storage</h4>
+                                <p class="text-gray-400">Attach durable EBS volumes or temporary, high-performance instance store volumes.</p>
+                            </div>
+                        </div>
+                         <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">5</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Add Tags</h4>
+                                <p class="text-gray-400">Add key-value metadata (e.g., Name=WebServer1) for billing, grouping, and automation.</p>
+                            </div>
+                        </div>
+                         <div class="flex items-start mb-8">
+                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">6</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Configure Security Group (Firewall)</h4>
+                                <p class="text-gray-400">Define inbound/outbound rules to act as a virtual firewall (e.g., allow SSH port 22).</p>
+                            </div>
+                        </div>
+                         <div class="flex items-start">
+                            <div class="bg-green-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">✓</div>
+                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                <h4 class="text-lg font-semibold text-white">Review & Launch</h4>
+                                <p class="text-gray-400">Check your configuration and launch the instance. Monitor its status on the EC2 Dashboard.</p>
+                            </div>
+                        </div>
+                    </div>
+                 </div>
             </div>
         </section>
 
