--- a/aws.html
+++ b/aws.html
@@ -420,69 +420,76 @@
             </div>
 
             <div class="bg-gray-800 p-6 rounded-xl shadow-lg border border-gray-700 mb-12">
-                 <h3 class="text-2xl font-bold text-center mb-6 text-white">Interacting with AWS: The Console</h3>
-                 <div class="max-w-4xl mx-auto">
-                    <div class="bg-gray-900/50 p-6 rounded-lg mb-8">
+                 <h3 class="text-2xl font-bold text-center mb-6 text-white">Interacting with AWS</h3>
+                 <div class="max-w-4xl mx-auto space-y-8">
+                    <div class="bg-gray-900/50 p-6 rounded-lg">
                         <h4 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-sky-400 to-cyan-400 mb-4">AWS Management Console (Web UI)</h4>
                         <p class="text-gray-400 mb-4">A web-based graphical interface to manage AWS services. It lets you search, configure, and monitor resources, and supports multiple logins.</p>
                         <p class="text-gray-400 mb-4"><strong class="text-gray-300">Good for:</strong> Beginners, users who prefer a point-and-click interface, and occasional tasks.</p>
-                        <p class="text-gray-400"><strong class="text-gray-300">Analogy:</strong> Like using a bank’s website/app to check your balance and transfer money.</p>
+                        <p class="text-gray-400 mb-6"><strong class="text-gray-300">Analogy:</strong> Like using a bank’s website/app to check your balance and transfer money.</p>
+                        
+                        <h4 class="text-xl font-bold text-center pt-4 text-white">Console Steps to Launch an EC2 Instance</h4>
+                        <div class="relative mt-6">
+                            <!-- Vertical Line -->
+                            <div class="absolute left-5 top-5 h-full w-0.5 bg-gray-700 hidden md:block"></div>
+                            <!-- Steps -->
+                            <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">0</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Choose Region (Where?)</h4>
+                                    <p class="text-gray-400">Determines where your server physically runs. Example: Mumbai (ap-south-1).</p>
+                                </div>
+                            </div>
+                            <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">1</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Choose AMI (What OS/App?)</h4>
+                                    <p class="text-gray-400">An Amazon Machine Image is a template with an OS and apps. Options include Linux, Windows, or Marketplace AMIs.</p>
+                                </div>
+                            </div>
+                             <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">3</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Configure Instance</h4>
+                                    <p class="text-gray-400">Set network (VPC & subnet), IAM role, monitoring, and launch multiple instances at once.</p>
+                                </div>
+                            </div>
+                             <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">4</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Add Storage</h4>
+                                    <p class="text-gray-400">Attach durable EBS volumes or temporary, high-performance instance store volumes.</p>
+                                </div>
+                            </div>
+                             <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">5</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Add Tags</h4>
+                                    <p class="text-gray-400">Add key-value metadata (e.g., Name=WebServer1) for billing, grouping, and automation.</p>
+                                </div>
+                            </div>
+                             <div class="flex items-start mb-8">
+                                <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">6</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Configure Security Group (Firewall)</h4>
+                                    <p class="text-gray-400">Define inbound/outbound rules to act as a virtual firewall (e.g., allow SSH port 22).</p>
+                                </div>
+                            </div>
+                             <div class="flex items-start">
+                                <div class="bg-green-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">✓</div>
+                                <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
+                                    <h4 class="text-lg font-semibold text-white">Review & Launch</h4>
+                                    <p class="text-gray-400">Check your configuration and launch the instance. Monitor its status on the EC2 Dashboard.</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-
-                    <h4 class="text-xl font-bold text-center mb-8 text-white">Console Steps to Launch an EC2 Instance</h4>
-                    <div class="relative">
-                        <!-- Vertical Line -->
-                        <div class="absolute left-5 top-5 h-full w-0.5 bg-gray-700 hidden md:block"></div>
-                        <!-- Steps -->
-                        <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">0</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Choose Region (Where?)</h4>
-                                <p class="text-gray-400">Determines where your server physically runs. Example: Mumbai (ap-south-1).</p>
-                            </div>
-                        </div>
-                        <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">1</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Choose AMI (What OS/App?)</h4>
-                                <p class="text-gray-400">An Amazon Machine Image is a template with an OS and apps. Options include Linux, Windows, or Marketplace AMIs.</p>
-                            </div>
-                        </div>
-                         <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">3</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Configure Instance</h4>
-                                <p class="text-gray-400">Set network (VPC & subnet), IAM role, monitoring, and launch multiple instances at once.</p>
-                            </div>
-                        </div>
-                         <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">4</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Add Storage</h4>
-                                <p class="text-gray-400">Attach durable EBS volumes or temporary, high-performance instance store volumes.</p>
-                            </div>
-                        </div>
-                         <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">5</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Add Tags</h4>
-                                <p class="text-gray-400">Add key-value metadata (e.g., Name=WebServer1) for billing, grouping, and automation.</p>
-                            </div>
-                        </div>
-                         <div class="flex items-start mb-8">
-                            <div class="bg-orange-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">6</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Configure Security Group (Firewall)</h4>
-                                <p class="text-gray-400">Define inbound/outbound rules to act as a virtual firewall (e.g., allow SSH port 22).</p>
-                            </div>
-                        </div>
-                         <div class="flex items-start">
-                            <div class="bg-green-500 rounded-full h-10 w-10 flex items-center justify-center text-white font-bold z-10 flex-shrink-0">✓</div>
-                            <div class="ml-8 bg-gray-800 p-4 rounded-lg w-full">
-                                <h4 class="text-lg font-semibold text-white">Review & Launch</h4>
-                                <p class="text-gray-400">Check your configuration and launch the instance. Monitor its status on the EC2 Dashboard.</p>
-                            </div>
-                        </div>
+                    <div class="bg-gray-900/50 p-6 rounded-lg">
+                        <h4 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-lime-400 to-green-400 mb-4">AWS CLI (Command Line Interface)</h4>
+                        <p class="text-gray-400 mb-4">A tool to manage AWS resources via command line. Supports scripting and automation for repeatable tasks.</p>
+                        <pre class="bg-gray-900 text-gray-300 p-3 rounded-md text-sm overflow-x-auto"><code>aws ec2 run-instances --image-id ami-12345678 --count 1 --instance-type t2.micro</code></pre>
+                        <p class="text-gray-400 mt-4 mb-4"><strong class="text-gray-300">Good for:</strong> Power users, developers, and automation via scripts (e.g., in CI/CD pipelines).</p>
+                        <p class="text-gray-400"><strong class="text-gray-300">Analogy:</strong> Like using ATM shortcuts instead of standing in line at the bank counter. Faster if you know the commands.</p>
                     </div>
                  </div>
             </div>
