--- a/aws.html
+++ b/aws.html
@@ -491,6 +491,15 @@
                         <p class="text-gray-400 mt-4 mb-4"><strong class="text-gray-300">Good for:</strong> Power users, developers, and automation via scripts (e.g., in CI/CD pipelines).</p>
                         <p class="text-gray-400"><strong class="text-gray-300">Analogy:</strong> Like using ATM shortcuts instead of standing in line at the bank counter. Faster if you know the commands.</p>
                     </div>
+                    <div class="bg-gray-900/50 p-6 rounded-lg">
+                        <h4 class="text-xl font-bold text-center text-transparent bg-clip-text bg-gradient-to-r from-yellow-400 to-orange-400 mb-4">AWS SDK (Software Development Kit)</h4>
+                        <p class="text-gray-400 mb-4">Language-specific libraries (APIs) to integrate AWS directly into your applications.</p>
+                        <pre class="bg-gray-900 text-gray-300 p-3 rounded-md text-sm overflow-x-auto"><code>import boto3
+s3 = boto3.client('s3')
+s3.create_bucket(Bucket='my-test-bucket')</code></pre>
+                        <p class="text-gray-400 mt-4 mb-4"><strong class="text-gray-300">Good for:</strong> Developers embedding AWS into apps, building cloud-native apps, and automating resource creation at the code level.</p>
+                        <p class="text-gray-400"><strong class="text-gray-300">Analogy:</strong> Like giving your bank account API access so your finance app can automatically pay bills.</p>
+                    </div>
                  </div>
             </div>
         </section>
